Revision history for CodeUnit

{{$NEXT}}

0.0.6  2025-05-13T19:18:16+02:00
    - Add support for :lang, :grammar and :actions named
      arguments to .new, allowing for quicker import of
      operators

0.0.5  2025-02-24T12:48:37+01:00
    - Allow for multi-line comments as well.

0.0.4  2025-02-23T21:05:29+01:00
    - Also keep changes in the grammar of an .eval in a
      sufficiently new Rakudo (HEAD or 2025.03+)

0.0.3  2025-02-21T21:12:41+01:00
    - Also save the exception for control exceptions, and turn
      the X::ControlFlow::Return exception into CX::Return for
      compatibility

0.0.2  2025-02-20T21:18:25+01:00
    - Make sure that lowered away lexicals don't show up in
      completions, as it will be impossible to get their value
    - Added CAVEATS section in the pod

0.0.1  2025-02-19T20:40:29+01:00
    - Initial version