@@ -3,26 +3,25 @@
   "authors": [
     "Elizabeth Mattijsen"
   ],
-  "build-depends": [
-  ],
   "depends": [
   ],
   "description": "Provide a unit for execution of code",
   "license": "Artistic-2.0",
   "name": "CodeUnit",
-  "perl": "6.d",
+  "production": true,
   "provides": {
     "CodeUnit": "lib/CodeUnit.rakumod"
   },
-  "resources": [
-  ],
-  "source-url": "https://github.com/lizmat/CodeUnit.git",
+  "raku": "6.d",
+  "support": {
+    "bugtracker": "https://github.com/lizmat/CodeUnit/issues",
+    "email": "liz@raku.rocks",
+    "source": "https://github.com/lizmat/CodeUnit.git"
+  },
   "tags": [
     "EVAL",
     "REPL",
     "STATE"
-  ],
-  "test-depends": [
   ],
   "version": "0.0.6"
 }
